Fixed bugs with whitespace and formatting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ textarea {
 }
 
 .saveBtn {
+    border: none;
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -73,4 +74,12 @@ textarea {
 
 .form-control {
     margin: 0 1px 0 0;
+}
+
+.col-1 {
+    padding-right: 0;
+}
+
+.oi {
+    top: 8px;
 }
